footer alingment bug - quick links and navbar scrollbar bug fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@
 }
 
 body {
+  @apply overflow-x-hidden w-full relative;
   -webkit-tap-highlight-color: transparent;
 }
 
